Change amount input type from number to text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <input type="text" name="name" placeholder="Enter your name" required/>
 
       <label>Amount</label>
-      <input type="number" name="amount" placeholder="Enter amount" required/>
+      <input type="text" id="numberInput" name="amount" placeholder="Enter amount" required/>
 
       <label>Plan</label>
       <input type="text" name="plan" placeholder="Enter plan" required/>
